--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,9 @@ github_username: SnailTowardThesun
 
 permalink: /:year/:month/:day/:title/
 
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://SnailTowardThesun.github.io" # the base hostname & protocol for your site
+
 gems: [jekyll-paginate]
 paginate: 6
 paginate_path: "/page:num/"
